# IZ1

./: .travi.yml  .travis.yml  CMakeLists.txt  README.md  gtest.cpp  main.c  reduction.c
headers/: reduction.h
